# pmldl-assignment-1

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
code/deployment/api/: Dockerfile  api.py
code/deployment/app/: Dockerfile  app.py  utils.py
code/models/: model.py
models/: model.pt  state_dict.pt
notebooks/: model.ipynb
