[tool.poetry]
name = "repo"
version = "0.1.0"
description = ""
authors = ["PodYapolskiy <podyapolskiyaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
fastapi = "^0.114.2"
streamlit-drawable-canvas = "^0.9.3"
tabulate = "^0.9.0"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
