[tool.poetry]
name = "repo"
version = "0.1.0"
description = ""
authors = ["PodYapolskiy <podyapolskiyaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
streamlit-drawable-canvas = "^0.9.3"
tabulate = "^0.9.0"
scikit-image = "^0.24.0"
ipykernel = "^6.29.5"
lightning = "^2.4.0"
tensorboard = "^2.17.1"
torch = {version = "^2.4.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.19.1+cpu", source = "pytorch-cpu"}

# https://github.com/python-poetry/poetry/issues/7685
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
